// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`typings 1`] = `
"packages/react/src/__tests__/__fixtures__/typings.tsx 228:1 - Type '{ a: true; b: true; }' is not assignable to type '(IntrinsicAttributes & { a: boolean; b?: undefined; } & { css?: Style | Style[] | StyledDecorator | undefined; } & { children?: ReactNode; }) | (IntrinsicAttributes & ... 2 more ... & { ...; })'.
  Type '{ a: true; b: true; }' is not assignable to type '{ a?: undefined; b: boolean; }'.
    Types of property 'a' are incompatible.
      Type 'true' is not assignable to type 'undefined'."
`;

exports[`typings 2`] = `
"packages/react/src/__tests__/__fixtures__/typings.tsx 230:30 - Type '{ color: \\"\\"; unknownProperty: number; }' is not assignable to type 'Style | Style[] | StyledDecorator | undefined'.
  Object literal may only specify known properties, and 'unknownProperty' does not exist in type 'Style | Style[] | StyledDecorator'."
`;

exports[`typings 3`] = `
"packages/react/src/__tests__/__fixtures__/typings.tsx 232:12 - Type '{ color: number; }' is not assignable to type 'Style | Style[] | StyledDecorator | undefined'.
  Types of property 'color' are incompatible.
    Type 'number' is not assignable to type '\\"transparent\\" | \\"inherit\\" | \\"-moz-initial\\" | \\"initial\\" | \\"revert\\" | \\"unset\\" | \\"aliceblue\\" | \\"antiquewhite\\" | \\"aqua\\" | \\"aquamarine\\" | \\"azure\\" | \\"beige\\" | \\"bisque\\" | \\"black\\" | \\"blanchedalmond\\" | ... 171 more ... | undefined'."
`;

exports[`typings 4`] = `
"packages/react/src/__tests__/__fixtures__/typings.tsx 234:24 - Argument of type '{ color: \\"\\"; unknownProperty: number; }' is not assignable to parameter of type 'Style'.
  Object literal may only specify known properties, and 'unknownProperty' does not exist in type 'Style'."
`;

exports[`typings 5`] = `"packages/react/src/__tests__/__fixtures__/typings.tsx 236:13 - Type 'number' is not assignable to type '\\"transparent\\" | \\"inherit\\" | \\"-moz-initial\\" | \\"initial\\" | \\"revert\\" | \\"unset\\" | \\"aliceblue\\" | \\"antiquewhite\\" | \\"aqua\\" | \\"aquamarine\\" | \\"azure\\" | \\"beige\\" | \\"bisque\\" | \\"black\\" | \\"blanchedalmond\\" | ... 171 more ... | undefined'."`;

exports[`typings 6`] = `
"packages/react/src/__tests__/__fixtures__/typings.tsx 238:20 - No overload matches this call.
  The last overload gave the following error.
    Argument of type '{ color: \\"\\"; unknownProperty: number; }' is not assignable to parameter of type 'Style'.
      Object literal may only specify known properties, and 'unknownProperty' does not exist in type 'Style'."
`;

exports[`typings 7`] = `
"packages/react/src/__tests__/__fixtures__/typings.tsx 240:9 - No overload matches this call.
  The last overload gave the following error.
    Type 'number' is not assignable to type '\\"transparent\\" | \\"inherit\\" | \\"-moz-initial\\" | \\"initial\\" | \\"revert\\" | \\"unset\\" | \\"aliceblue\\" | \\"antiquewhite\\" | \\"aqua\\" | \\"aquamarine\\" | \\"azure\\" | \\"beige\\" | \\"bisque\\" | \\"black\\" | \\"blanchedalmond\\" | ... 171 more ... | undefined'."
`;

exports[`typings 8`] = `
"packages/react/src/__tests__/__fixtures__/typings.tsx 242:43 - Type '{ color: \\"\\"; unknownProperty: number; }' is not assignable to type 'Style | Style[] | StyledDecorator | undefined'.
  Object literal may only specify known properties, and 'unknownProperty' does not exist in type 'Style | Style[] | StyledDecorator'."
`;

exports[`typings 9`] = `
"packages/react/src/__tests__/__fixtures__/typings.tsx 244:25 - Type '{ color: number; }' is not assignable to type 'Style | Style[] | StyledDecorator | undefined'.
  Types of property 'color' are incompatible.
    Type 'number' is not assignable to type '\\"transparent\\" | \\"inherit\\" | \\"-moz-initial\\" | \\"initial\\" | \\"revert\\" | \\"unset\\" | \\"aliceblue\\" | \\"antiquewhite\\" | \\"aqua\\" | \\"aquamarine\\" | \\"azure\\" | \\"beige\\" | \\"bisque\\" | \\"black\\" | \\"blanchedalmond\\" | ... 171 more ... | undefined'."
`;

exports[`typings 10`] = `
"packages/react/src/__tests__/__fixtures__/typings.tsx 246:51 - No overload matches this call.
  The last overload gave the following error.
    Argument of type '{ color: \\"\\"; unknownProperty: number; }' is not assignable to parameter of type 'Style'.
      Object literal may only specify known properties, and 'unknownProperty' does not exist in type 'Style'."
`;

exports[`typings 11`] = `
"packages/react/src/__tests__/__fixtures__/typings.tsx 248:40 - No overload matches this call.
  The last overload gave the following error.
    Type 'number' is not assignable to type '\\"transparent\\" | \\"inherit\\" | \\"-moz-initial\\" | \\"initial\\" | \\"revert\\" | \\"unset\\" | \\"aliceblue\\" | \\"antiquewhite\\" | \\"aqua\\" | \\"aquamarine\\" | \\"azure\\" | \\"beige\\" | \\"bisque\\" | \\"black\\" | \\"blanchedalmond\\" | ... 171 more ... | undefined'."
`;

exports[`typings 12`] = `
"packages/react/src/__tests__/__fixtures__/typings.tsx 250:7 - No overload matches this call.
  The last overload gave the following error.
    Argument of type '() => Promise<unknown>' is not assignable to parameter of type 'StyledElementLike<ComponentType<StyledElementProps>> | ComponentClass<{}, any> | FunctionComponent<{}>'.
      Type '() => Promise<unknown>' is not assignable to type 'FunctionComponent<{}>'.
        Type 'Promise<unknown>' is missing the following properties from type 'ReactElement<any, any>': type, props, key"
`;

exports[`typings 13`] = `
"packages/react/src/__tests__/__fixtures__/typings.tsx 252:7 - No overload matches this call.
  The last overload gave the following error.
    Argument of type '() => Promise<unknown>' is not assignable to parameter of type 'StyledElementLike<ComponentType<StyledElementProps>> | ComponentClass<{}, any> | FunctionComponent<{}>'.
      Type '() => Promise<unknown>' is not assignable to type 'FunctionComponent<{}>'.
        Type 'Promise<unknown>' is not assignable to type 'ReactElement<any, any>'."
`;

exports[`typings 14`] = `
"packages/react/src/__tests__/__fixtures__/typings.tsx 254:1 - 'styled.button' cannot be used as a JSX component.
  Its return type 'StyledComponentWithRef<ButtonHTMLAttributes<HTMLButtonElement>, HTMLButtonElement>' is not a valid JSX element.
    Type 'StyledComponentWithRef<ButtonHTMLAttributes<HTMLButtonElement>, HTMLButtonElement>' is missing the following properties from type 'Element': type, props, key"
`;

exports[`typings 15`] = `"packages/react/src/__tests__/__fixtures__/typings.tsx 257:1 - JSX element type 'NotAStyledComponent' does not have any construct or call signatures."`;

exports[`typings 16`] = `
"packages/react/src/__tests__/__fixtures__/typings.tsx 269:44 - Type '{ css: {}; ref: RefObject<unknown>; }' is not assignable to type 'IntrinsicAttributes & Pick<{ ref?: ((instance: HTMLButtonElement | null) => void) | RefObject<HTMLButtonElement> | null | undefined; }, never> & { ...; } & { ...; }'.
  Property 'ref' does not exist on type 'IntrinsicAttributes & Pick<{ ref?: ((instance: HTMLButtonElement | null) => void) | RefObject<HTMLButtonElement> | null | undefined; }, never> & { ...; } & { ...; }'."
`;
